[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Scripts/schmancy_buttons.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/use_this.tres" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/SFX/ui/click_004.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/ui/switch14.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/ui/scroll_002.ogg" type="AudioStream" id=6]

[sub_resource type="Shader" id=63]
code = "shader_type canvas_item;
uniform sampler2D noise_img;
uniform float speed = 1.0;
uniform vec4 smoke_color : hint_color;

void fragment(){
	vec2 uv1 = vec2(UV.x + TIME*speed, UV.y);
	vec2 uv2 = vec2(UV.x - TIME*speed, UV.y);
	vec2 uv3 = vec2(UV.x, UV.y + TIME*speed);
	
	
	float noise_r = texture( noise_img, uv1 ).r;
	float noise_g = texture( noise_img, uv2 ).g;
	float noise_b = texture( noise_img, uv3 ).b;
	
	vec3 new_color = vec3(noise_r, noise_g, noise_b);
	
	float new_alpha = noise_r * noise_g * noise_b;
	
	COLOR.rgb = smoke_color.rgb;//texture(TEXTURE, UV).rgb;
	COLOR.a = clamp(new_alpha * 5.0 * texture(TEXTURE, UV).a, 0.0, 1.0);
}"

[sub_resource type="OpenSimplexNoise" id=64]

[sub_resource type="NoiseTexture" id=65]
width = 1000
height = 1000
seamless = true
noise = SubResource( 64 )

[sub_resource type="ShaderMaterial" id=66]
shader = SubResource( 63 )
shader_param/speed = 0.05
shader_param/smoke_color = Color( 0.160784, 0.223529, 0.92549, 1 )
shader_param/noise_img = SubResource( 65 )

[sub_resource type="Gradient" id=61]
interpolation_mode = 2
offsets = PoolRealArray( 0.139623, 1 )
colors = PoolColorArray( 0.113725, 0.0509804, 0.0509804, 0.160784, 0.0998936, 0.096344, 0.140137, 1 )

[sub_resource type="GradientTexture2D" id=62]
gradient = SubResource( 61 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0, 0 )

[sub_resource type="DynamicFontData" id=50]
antialiased = false
font_path = "res://Assets/Font/upheavtt.ttf"

[sub_resource type="DynamicFont" id=57]
size = 91
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 50 )

[sub_resource type="DynamicFont" id=54]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=55]
bg_color = Color( 0.960784, 0.478431, 0.129412, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.960784, 0.223529, 0.172549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=56]
bg_color = Color( 0.984314, 0.619608, 0.188235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.988235, 0.364706, 0.321569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="DynamicFont" id=58]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 50 )

[sub_resource type="StyleBoxFlat" id=60]
bg_color = Color( 0.0901961, 0.262745, 0.94902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=59]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -8
font_data = SubResource( 50 )

[sub_resource type="Environment" id=67]
background_mode = 4
tonemap_white = 0.35
glow_enabled = true
glow_intensity = 1.39
glow_strength = 0.89
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.164706, 0.258824, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.372549 )
material = SubResource( 66 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 62 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -218.0
margin_top = 8.0
margin_right = 218.0
margin_bottom = 92.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 57 )
bbcode_enabled = true
bbcode_text = "[center][wave]SETTINGS"
text = "SETTINGS"
fit_content_height = true
scroll_active = false

[node name="MainMenu" type="Button" parent="."]
modulate = Color( 1.15, 1, 1, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -66.0
margin_right = 61.0
margin_bottom = -10.0
focus_neighbour_right = NodePath("../HBoxContainer/NextButton")
custom_fonts/font = SubResource( 54 )
custom_styles/hover = SubResource( 55 )
custom_styles/pressed = SubResource( 55 )
custom_styles/focus = SubResource( 56 )
custom_styles/disabled = SubResource( 56 )
custom_styles/normal = SubResource( 56 )
text = "BACK"
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.5
margin_top = -91.0
margin_right = 279.5
margin_bottom = 91.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 559.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 559.0
margin_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 141.0
margin_top = 6.0
margin_right = 338.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 58 )
text = "FUllscreen: "
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 342.0
margin_right = 418.0
margin_bottom = 40.0
custom_constants/check_vadjust = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
margin_top = 44.0
margin_right = 559.0
margin_bottom = 54.0
custom_constants/separation = 10
custom_styles/separator = SubResource( 60 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 559.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 58 )
text = "Music volume"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 559.0
margin_bottom = 110.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 59 )
text = "0% "
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 480.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 2
min_value = -50.0
max_value = 0.0
step = 0.1
tick_count = 10
ticks_on_borders = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 484.0
margin_right = 559.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 59 )
text = " 100%"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 559.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 58 )
text = "SFX VOLUME"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 559.0
margin_bottom = 166.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 49.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 59 )
text = "0% "
align = 1
valign = 1

[node name="SfxSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 53.0
margin_right = 480.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 2
min_value = -30.0
max_value = 0.0
step = 0.1
tick_count = 10
ticks_on_borders = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 484.0
margin_right = 559.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 59 )
text = " 100%"
align = 1
valign = 1

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
margin_top = 170.0
margin_right = 559.0
margin_bottom = 180.0
custom_constants/separation = 10
custom_styles/separator = SubResource( 60 )

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 559.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 58 )
text = "CONTROLLER DEADZONE"
align = 1
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 559.0
margin_bottom = 236.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_right = 18.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 59 )
text = "0"
align = 1
valign = 1

[node name="DeadzoneSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 22.0
margin_right = 547.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 551.0
margin_right = 559.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 59 )
text = "1"
align = 1
valign = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 67 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SoundEffects"

[node name="switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SoundEffects"

[node name="scroll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "SoundEffects"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.01

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer3/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_MusicSlider_drag_ended"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="on_scroll_focused"]
[connection signal="focus_exited" from="HBoxContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="on_scroll_focus_exited"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/HBoxContainer2/SfxSlider" to="." method="_on_SfxSlider_drag_ended"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/HBoxContainer2/SfxSlider" to="." method="on_scroll_focused"]
[connection signal="focus_exited" from="HBoxContainer/VBoxContainer/HBoxContainer2/SfxSlider" to="." method="on_scroll_focus_exited"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer2/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/HBoxContainer4/DeadzoneSlider" to="." method="_on_DeadzoneSlider_drag_ended"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/HBoxContainer4/DeadzoneSlider" to="." method="on_scroll_focused"]
[connection signal="focus_exited" from="HBoxContainer/VBoxContainer/HBoxContainer4/DeadzoneSlider" to="." method="on_scroll_focus_exited"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer4/DeadzoneSlider" to="." method="_on_DeadzoneSlider_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
